test/spec/simd/simd_f64x2_cmp.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_f64x2_cmp.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_f64x2_cmp.wast:7954: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.1.wat:1:66: error: unexpected token "f2x64.eq", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.eq (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7955: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.2.wat:1:66: error: unexpected token "f2x64.ne", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.ne (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7956: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.3.wat:1:66: error: unexpected token "f2x64.lt", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.lt (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7957: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.4.wat:1:66: error: unexpected token "f2x64.le", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.le (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7958: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.5.wat:1:66: error: unexpected token "f2x64.gt", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.gt (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7959: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_cmp/simd_f64x2_cmp.6.wat:1:66: error: unexpected token "f2x64.ge", expected an instr.
  ...v128) (param $y v128) (result v128) (f2x64.ge (local.get $x) (local.get $y)))
                                          ^^^^^^^^
out/test/spec/simd/simd_f64x2_cmp.wast:7962: assert_invalid passed:
  error: type mismatch in f64x2.eq, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7963: assert_invalid passed:
  error: type mismatch in f64x2.ne, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7964: assert_invalid passed:
  error: type mismatch in f64x2.lt, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7965: assert_invalid passed:
  error: type mismatch in f64x2.le, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7966: assert_invalid passed:
  error: type mismatch in f64x2.gt, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7967: assert_invalid passed:
  error: type mismatch in f64x2.ge, expected [v128, v128] but got [i32, f32]
  0000021: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7972: assert_invalid passed:
  error: type mismatch in f64x2.eq, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7980: assert_invalid passed:
  error: type mismatch in f64x2.eq, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7988: assert_invalid passed:
  error: type mismatch in f64x2.ne, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:7996: assert_invalid passed:
  error: type mismatch in f64x2.ne, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8004: assert_invalid passed:
  error: type mismatch in f64x2.lt, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8012: assert_invalid passed:
  error: type mismatch in f64x2.lt, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8020: assert_invalid passed:
  error: type mismatch in f64x2.le, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8028: assert_invalid passed:
  error: type mismatch in f64x2.le, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8036: assert_invalid passed:
  error: type mismatch in f64x2.gt, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8044: assert_invalid passed:
  error: type mismatch in f64x2.gt, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8052: assert_invalid passed:
  error: type mismatch in f64x2.ge, expected [v128, v128] but got [v128]
  000002c: error: OnCompareExpr callback failed
out/test/spec/simd/simd_f64x2_cmp.wast:8060: assert_invalid passed:
  error: type mismatch in f64x2.ge, expected [v128, v128] but got []
  000001a: error: OnCompareExpr callback failed
2683/2683 tests passed.
;;; STDOUT ;;)
